--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<li><a href="https://scholar.google.com.hk/citations?user=sM2XqCAAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="https://github.com/BeyonderXX" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="mailto: xiao_wang20@fudan.edu.cn" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="https://twitter.com/TerrorbladeUSTC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/XiaoWangNLP" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 					</ul>
 					
 					
@@ -141,7 +141,7 @@
 					<li><a href="https://scholar.google.com.hk/citations?user=sM2XqCAAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 					<li><a href="https://github.com/BeyonderXX" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto: xiao_wang20@fudan.edu.cn" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-					<li><a href="https://twitter.com/TerrorbladeUSTC" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://twitter.com/XiaoWangNLP" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Xiao Wang</li><li>Design: HTML5 UP</li>
