--- a/index.html
+++ b/index.html
@@ -60,6 +60,33 @@
 						<p style="display:inline">
 							<ul style="list-style-type:circle; line-height:200%;">
 								<li style="margin-bottom: 1em;">
+									<strong>Shadow Alignment: The Ease of Subverting Safely-Aligned Language Models</strong><br>
+									Xianjun Yang*, <b>Xiao Wang*</b>, Qi Zhang, Linda Petzold, William Yang Wang, Xun Zhao, Dahua Lin<br>
+									<em>Under Review</em>
+									<small>[<a href="https://arxiv.org/pdf/2310.02949.pdf">paper</a>]</small>
+									<small>[<a href="https://github.com/BeyonderXX/ShadowAlignment">code</a>]</small>
+								</li>
+								<li style="margin-bottom: 1em;">
+									<strong>The Rise and Potential of Large Language Model Based Agents: A Survey</strong><br>
+									Zhiheng Xi, Wenxiang Chen, Xin Guo, Wei He, Yiwen Ding, Boyang Hong, Ming Zhang, Junzhe Wang, Senjie Jin, Enyu Zhou, Rui Zheng, Xiaoran Fan, <b>Xiao Wang</b>, Limao Xiong, Yuhao Zhou, Weiran Wang, Changhao Jiang, Yicheng Zou, Xiangyang Liu, Zhangyue Yin, Shihan Dou, Rongxiang Weng, Wensen Cheng, Qi Zhang, Wenjuan Qin, Yongyan Zheng, Xipeng Qiu, Xuanjing Huang, Tao Gui<br>
+									<em>Under Review</em>
+									<small>[<a href="https://arxiv.org/pdf/2309.07864.pdf">paper</a>]</small>
+								</li>
+								<li style="margin-bottom: 1em;">
+									<strong>TRACE: A Comprehensive Benchmark for Continual Learning in Large Language Models</strong><br>
+									<b>Xiao Wang</b>, Yuansen Zhang, Tianze Chen, Songyang Gao, Senjie Jin, Xianjun Yang, Zhiheng Xi, Rui Zheng, Yicheng Zou, Tao Gui, Qi Zhang, Xuanjing Huang<br>
+									<em>Under Review</em>
+									<small>[<a href="https://arxiv.org/pdf/2310.06762.pdf">paper</a>]</small>
+									<small>[<a href="https://github.com/BeyonderXX/TRACE">code</a>]</small>
+								</li>
+								<li style="margin-bottom: 1em;">
+									<strong>Orthogonal Subspace Learning for Language Model Continual Learning </strong><br>
+									<b>Xiao Wang</b>, Tianze Chen, Qiming Ge, Han Xia, Rong Bao, Rui Zheng, Qi Zhang, Tao Gui, Xuanjing Huang<br>
+									<em>EMNLP Findings 2023</em>
+									<small>[<a href="https://arxiv.org/pdf/2310.14152.pdf">paper</a>]</small>
+									<small>[<a href="https://github.com/cmnfriend/O-LoRA">code</a>]</small>
+								</li>
+								<li style="margin-bottom: 1em;">
 									<strong>InstructUIE: Multi-task Instruction Tuning for Unified Information Extraction</strong><br>
 									<b>Xiao Wang</b>, Weikang Zhou, Can Zu, Han Xia, Tianze Chen, Yuansen Zhang, Rui Zheng, Junjie Ye, Qi Zhang, Tao Gui, Jihua Kang, Jingsheng Yang, Siyuan Li, Chunsai Du<br>
 									<em>Under Review</em>
