--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
 									<small>[<a href="https://github.com/BeyonderXX/ShadowAlignment">code</a>]</small>
 								</li>
 								<li style="margin-bottom: 1em;">
+									<strong>Improving Generalization of Alignment with Human Preferences through Group Invariant Learning</strong>
+									<br> Rui Zheng, Wei Shen, Yuan Hua, Wenbin Lai, Shihan Dou, Yuhao Zhou, Zhiheng Xi, <b>Xiao Wang</b>, Haoran Huang, Tao Gui, Qi Zhang, Xuanjing Huang<br>
+									<em>Under Review</em>
+									<small>[<a href="https://arxiv.org/pdf/2310.11971.pdf">paper</a>]</small>
+								</li>
+								<li style="margin-bottom: 1em;">
 									<strong>The Rise and Potential of Large Language Model Based Agents: A Survey</strong><br>
 									Zhiheng Xi, Wenxiang Chen, Xin Guo, Wei He, Yiwen Ding, Boyang Hong, Ming Zhang, Junzhe Wang, Senjie Jin, Enyu Zhou, Rui Zheng, Xiaoran Fan, <b>Xiao Wang</b>, Limao Xiong, Yuhao Zhou, Weiran Wang, Changhao Jiang, Yicheng Zou, Xiangyang Liu, Zhangyue Yin, Shihan Dou, Rongxiang Weng, Wensen Cheng, Qi Zhang, Wenjuan Qin, Yongyan Zheng, Xipeng Qiu, Xuanjing Huang, Tao Gui<br>
 									<em>Under Review</em>
