Add postdoc bold notation

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
           My research primarily focuses on the safety of Large Language Models, encompassing fine-tuning attack and defense, Jailbreak, and comprehensive safety evaluations. I am also deeply interested in continual learning as a means to advance intelligence.</p>
 
-          <p class="lead mb-5">Actively looking for postdoc roles in similar research fields. Reach out if our interests match!</p>
+          <p class="lead mb-5">Actively <b>looking for postdoc</b> roles in similar research fields. Reach out if our interests match!</p>
 
           <div class="social-icons">
             <a href="https://scholar.google.com.hk/citations?user=sM2XqCAAAAAJ&hl=en" target="_blank">
