Update Code Attack resource

--- a/index.html
+++ b/index.html
@@ -117,6 +117,26 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">CodeChameleon: Personalized Encryption Framework for Jailbreaking Large Language Models</h3>
+              <div class="subheading">Huijie Lv*, <b>Xiao Wang*</b> , Yuansen Zhang, Caishuang Huang, Shihan Dou, Junjie Ye, Tao Gui, Qi Zhang, Xuanjing Huang</div>
+              <div class="subheading"><strong>Under Review</strong>, 2024</div>
+              <div class="subheading mb-1">
+                <ul class="list-inline dev-icons">
+                  <li class="list-inline-item">
+                    <a href="https://arxiv.org/pdf/2402.16717.pdf" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Download PDF"><i class="far fa-file-pdf"></i></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://github.com/huizhang-L/CodeChameleon" target="_blank" data-toggle="tooltip" data-placement="bottom" title="View Code Repository"><i class="fab fa-github"></i></a>
+                  </li>
+                </ul>
+              </div>
+              <p>We delves into the mechanisms behind jailbreak attacks, introducing CodeChameleon, a novel jailbreak framework based on personalized encryption tactics. To elude the intent security recognition phase, we reformulate tasks into a code completion format, enabling users to encrypt queries using personalized encryption functions. To guarantee response generation functionality, we embed a decryption function within the instructions, which allows the LLM to decrypt and execute the encrypted queries successfully. </p>
+            </div>
+            <div class="resume-date text-md-right" id="CodeAttackImage"></div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Navigating the OverKill in Large Language Models</h3>
               <div class="subheading">Chenyu Shi*, <b>Xiao Wang*</b> , Qiming Ge, Songyang Gao, Xianjun Yang, Tao Gui, Qi Zhang, Xuanjing Huang, Xun Zhao, Dahua Lin</div>
               <div class="subheading"><strong>Under Review</strong>, 2024</div>
@@ -221,14 +241,18 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">RoCoIns: Enhancing Robustness of Large Language Models through Code-Style Instructions</h3>
               <div class="subheading">Yuansen Zhang*, <b>Xiao Wang*</b>, Zhiheng Xi, Han Xia, Tao Gui, Qi Zhang, Bingning Wang, Xuanjing Huang</div>
-              <div class="subheading"><strong>Under Review</strong>, 2023</div>
-              <!-- <div class="subheading mb-1">
+              <div class="subheading"><strong>COLING</strong>, 2024</div>
+              <div class="subheading mb-1">
                 <ul class="list-inline dev-icons">
                   <li class="list-inline-item">
-                    <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Download PDF"><i class="far fa-file-pdf"></i></a>
+                    <!-- Replace with actual PDF link -->
+                    <a href="https://arxiv.org/pdf/2402.16431.pdf" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Download PDF"><i class="far fa-file-pdf"></i></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://github.com/nitwtog/ISS" target="_blank" data-toggle="tooltip" data-placement="bottom" title="View Code Repository"><i class="fab fa-github"></i></a>
                   </li>
                 </ul>
-              </div> --> 
+              </div> 
               <p>Drawing inspiration from recent works that LLMs are sensitive to the instruction design, we utilize instructions in code style, which are more structural and less ambiguous, to replace typically natural language instructions.</p>
             </div>
             <div class="resume-date text-md-right" id="RoCoInsImage"></div>
