--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
           </div>
           <p class="lead mb-5">Hi! I am a <b>final year</b> PhD Student in <a href="https://nlp.fudan.edu.cn/">Fudan University NLP group</a>, co-advised by <a href="http://qizhang.info/">Prof. Qi Zhang</a> and <a href="https://nlp.fudan.edu.cn/28702/list.htm">Prof. Xuanjing Huang</a>. 
 
-          Complementing my studies, I'm currently interning at <a href="https://www.sailab.org.cn/">Shanghai AI Laboratory</a>, mentored by <a href="http://dahua.site/">Prof. Dahua Lin</a> and <a href="https://zhaoxun.tech/">Dr. Xun Zhao</a>.
+          Complementing my studies, I'm currently interning at <a href="https://www.sailab.org.cn/">Shanghai AI Laboratory</a>, mentored by <a href="http://dahua.site/">Prof. Dahua Lin</a> and <a href="https://zhaoxun.tech/">Dr. Xun Zhao</a>.</p>
 
-          My research primarily focuses on the safety of Large Language Models, encompassing Jailbreak, defense strategies, and comprehensive safety evaluations. I am also deeply interested in continual learning as a means to advance intelligence.</p>
+          <p class="lead mb-5">My research is centered on Trustworthy AI, addressing the core principles of robustness, security, truthfulness, privacy, fairness, and transparency in AI systems. My recent work has been specifically focused on the robustness and security of Large Language Models (LLMs), tackling jailbreak vulnerabilities, exploring the dual-use potential of open-source models, and seeking a balance between harmlessness and helpfulness. Additionally, I am invested in continual learning and information extraction, as both are crucial to my goal of developing AI systems that are intelligent and reliable.</p>
 
           <p class="lead mb-5">Actively <b>looking for postdoc</b> roles in similar research fields. Reach out if our interests match!</p>
 
@@ -524,9 +524,9 @@
               <h3 class="mb-0"><a href="https://www.shlab.org.cn/research" target="_blank">Shanghai AI Lab</a></h3>
               <div class="subheading mb-3">Research Scientist Intern, Mentors: Xun Zhao and <a href="http://dahua.site/">Dahua Lin</a>.</div>
                 <ul>
-                  <li><b>Safety Attack</b>: Employ minimal sample fine-tuning to reverse LLMs' safety alignment, emphasizing the potential for malicious exploitation in open-source models.</li>
-                  <li><b>Safety Defense</b>: Develop additional processing methods for open-source models to resist malicious sample fine-tune attacks, preserving the models' original helpful capabilities.</li>
-                  <li><b>Safety Evaluation</b>: Further evaluate LLM safety, including assessing the extent of unsafe outputs and the over-safety in rejecting normal requests.</li>
+                  <li><b>Misuse of LLMs</b>: Investigate the security vulnerabilities of open-source LLMs, employing minimal sample fine-tuning techniques to reverse LLMs' safety alignment; utilizes In-Context Learning to exploit unaligned LLMs, generating high-quality malicious responses.</li>
+                  <li><b>LLM Alignment</b>: Investigate the trade-off between harmlessness and helpfulness in LLMs, focusing on enhancing model safety without diminishing its utility, and addressing the issue of exaggerated safety in aligned LLMs that lead to the rejection of benign requests.</li>
+
                 </ul>
             </div>
             <div class="resume-logo text-md-right" id="ShanghaiAILabLogo">
