--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
           Complementing my studies, I'm currently interning at <a href="https://www.sailab.org.cn/">Shanghai AI Laboratory</a>, mentored by <a href="http://dahua.site/">Prof. Dahua Lin</a> and <a href="https://zhaoxun.tech/">Dr. Xun Zhao</a>.</p>
 
-          <p class="lead mb-5">My research is centered on Trustworthy AI, addressing the core principles of robustness, security, truthfulness, privacy, fairness, and transparency in AI systems. My recent work has been specifically focused on the robustness and security of Large Language Models (LLMs), tackling jailbreak vulnerabilities, exploring the dual-use potential of open-source models, and seeking a balance between harmlessness and helpfulness. Additionally, I am invested in continual learning and information extraction, as both are crucial to my goal of developing AI systems that are intelligent and reliable.</p>
+          <p class="lead mb-5">My research is centered on <b>Trustworthy AI</b>, addressing the core principles of robustness, security, truthfulness, privacy, fairness, and transparency in AI systems. My recent work has been specifically focused on the <b>robustness and security of Large Language Models</b> (LLMs), tackling jailbreak vulnerabilities, exploring the dual-use potential of open-source models, and seeking a balance between harmlessness and helpfulness. Additionally, I am invested in continual learning and information extraction, as both are crucial to my goal of developing AI systems that are intelligent and reliable.</p>
 
           <p class="lead mb-5">Actively <b>looking for postdoc</b> roles in similar research fields. Reach out if our interests match!</p>
 
