--- a/index.html
+++ b/index.html
@@ -117,6 +117,29 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">EasyJailbreak: A Unified Framework for Jailbreaking Large Language Models</h3>
+              <div class="subheading">
+                Weikang Zhou*, <b>Xiao Wang*</b>, Limao Xiong, Han Xia, Yingshuang Gu, Mingxu Chai, Fukang Zhu, and others
+              </div>
+              <div class="subheading"><strong>Under Review</strong>, 2024</div>
+              <div class="subheading mb-1">
+                <ul class="list-inline dev-icons">
+                  <li class="list-inline-item">
+                    <a href="https://arxiv.org/pdf/2403.12171.pdf" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Download PDF"><i class="far fa-file-pdf"></i></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://github.com/EasyJailbreak/EasyJailbreak" target="_blank" data-toggle="tooltip" data-placement="bottom" title="View Code Repository"><i class="fab fa-github"></i></a>
+                  </li>
+                </ul>
+              </div>
+              <p>
+                We introduce EasyJailbreak, a unified framework simplifying the construction and evaluation of jailbreak attacks against LLMs. Its modular framework enables researchers to easily construct attacks from combinations of novel and existing components. So far, EasyJailbreak supports 11 distinct jailbreak methods and facilitates the security validation of a broad spectrum of LLMs. Our validation across 10 distinct LLMs reveals a significant vulnerability, with an average breach probability of 60% under various jailbreaking attacks. </p>
+            </div>
+            <div class="resume-date text-md-right" id="EasyJailbreakImage"></div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">CodeChameleon: Personalized Encryption Framework for Jailbreaking Large Language Models</h3>
               <div class="subheading">Huijie Lv*, <b>Xiao Wang*</b> , Yuansen Zhang, Caishuang Huang, Shihan Dou, Junjie Ye, Tao Gui, Qi Zhang, Xuanjing Huang</div>
               <div class="subheading"><strong>Under Review</strong>, 2024</div>
