--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">EasyJailbreak: A Unified Framework for Jailbreaking Large Language Models</h3>
               <div class="subheading">
-                Weikang Zhou*, <b>Xiao Wang*</b>, Limao Xiong, Han Xia, Yingshuang Gu, Mingxu Chai, Fukang Zhu, and others
+                Weikang Zhou*, <b>Xiao Wang*&dagger;</b>, Limao Xiong, Han Xia, Yingshuang Gu, Mingxu Chai, Fukang Zhu, and others
               </div>
               <div class="subheading"><strong>Under Review</strong>, 2024</div>
               <div class="subheading mb-1">
@@ -141,7 +141,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">CodeChameleon: Personalized Encryption Framework for Jailbreaking Large Language Models</h3>
-              <div class="subheading">Huijie Lv*, <b>Xiao Wang*</b> , Yuansen Zhang, Caishuang Huang, Shihan Dou, Junjie Ye, Tao Gui, Qi Zhang, Xuanjing Huang</div>
+              <div class="subheading">Huijie Lv*, <b>Xiao Wang*&dagger;</b> , Yuansen Zhang, Caishuang Huang, Shihan Dou, Junjie Ye, Tao Gui, Qi Zhang, Xuanjing Huang</div>
               <div class="subheading"><strong>Under Review</strong>, 2024</div>
               <div class="subheading mb-1">
                 <ul class="list-inline dev-icons">
@@ -182,7 +182,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Shadow Alignment: The Ease of Subverting Safely-aligned Language Models</h3>
               <div class="subheading">Xianjun Yang*, <b>Xiao Wang*</b> , Qi Zhang, Linda Petzold, William Yang Wang, Xun Zhao, Dahua Lin</div>
-              <div class="subheading"><strong>Under Review</strong>, 2023</div>
+              <div class="subheading"><strong>SeT LLM @ ICLR</strong>, 2023</div>
               <div class="subheading mb-1">
                 <ul class="list-inline dev-icons">
                   <li class="list-inline-item">
@@ -259,7 +259,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">RoCoIns: Enhancing Robustness of Large Language Models through Code-Style Instructions</h3>
-              <div class="subheading">Yuansen Zhang*, <b>Xiao Wang*</b>, Zhiheng Xi, Han Xia, Tao Gui, Qi Zhang, Bingning Wang, Xuanjing Huang</div>
+              <div class="subheading">Yuansen Zhang*, <b>Xiao Wang*&dagger;</b>, Zhiheng Xi, Han Xia, Tao Gui, Qi Zhang, Bingning Wang, Xuanjing Huang</div>
               <div class="subheading"><strong>COLING</strong>, 2024</div>
               <div class="subheading mb-1">
                 <ul class="list-inline dev-icons">
