Update work status

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
           </h1>
           <div class="subheading mb-5">2005 Songhu Rd., Shanghai, China · xiao_wang20 [at] fudan [dot] edu [dot] cn
           </div>
-          <p class="lead mb-5">Hi! I am a <b>final year</b> PhD Student in <a href="https://nlp.fudan.edu.cn/">Fudan University NLP group</a>, co-advised by <a href="http://qizhang.info/">Prof. Qi Zhang</a> and <a href="https://nlp.fudan.edu.cn/28702/list.htm">Prof. Xuanjing Huang</a>. 
 
-          Complementing my studies, I'm currently interning at <a href="https://www.sailab.org.cn/">Shanghai AI Laboratory</a>, mentored by <a href="http://dahua.site/">Prof. Dahua Lin</a> and <a href="https://zhaoxun.tech/">Dr. Xun Zhao</a>.</p>
+          <p class="lead mb-5">Hi! I am a <b>PhD graduate</b> from <a href="https://nlp.fudan.edu.cn/">Fudan University NLP group</a>, formerly co-advised by <a href="http://qizhang.info/">Prof. Qi Zhang</a> and <a href="https://nlp.fudan.edu.cn/28702/list.htm">Prof. Xuanjing Huang</a>. During my doctoral studies, which included an internship at <a href="https://www.sailab.org.cn/">Shanghai AI Laboratory</a> under <a href="http://dahua.site/">Prof. Dahua Lin</a> and <a href="https://zhaoxun.tech/">Dr. Xun Zhao</a>, my research focused on the <b>trustworthiness of LLMs</b>, particularly their robustness and security, <b>continual learning</b>, and <b>information extraction</b>.</p>
 
-          <p class="lead mb-5">My research is centered on <b>Trustworthy AI</b>, addressing the core principles of robustness, security, truthfulness, privacy, fairness, and transparency in AI systems. My recent work has been specifically focused on the <b>robustness and security of Large Language Models</b> (LLMs), tackling jailbreak vulnerabilities, exploring the dual-use potential of open-source models, and seeking a balance between harmlessness and helpfulness. Additionally, I am invested in continual learning and information extraction, as both are crucial to my goal of developing AI systems that are intelligent and reliable.</p>
+          <p class="lead mb-5">I am currently employed at <a href="https://www.zhipu.ai/">Zhipu AI</a>, working within the post-training group. My work involves <b>Alignment, RLHF, Reasoning, and Code</b>. </p>
 
-          <p class="lead mb-5">Actively <b>looking for postdoc</b> roles in similar research fields. Reach out if our interests match!</p>
+          <p class="lead mb-5">I am always open to collaborations and discussions with others who are interested in these areas. Feel free to reach out to connect!</p>
+
 
           <div class="social-icons">
             <a href="https://scholar.google.com.hk/citations?user=sM2XqCAAAAAJ&hl=en" target="_blank">
@@ -162,7 +162,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Navigating the OverKill in Large Language Models</h3>
               <div class="subheading">Chenyu Shi*, <b>Xiao Wang*</b> , Qiming Ge, Songyang Gao, Xianjun Yang, Tao Gui, Qi Zhang, Xuanjing Huang, Xun Zhao, Dahua Lin</div>
-              <div class="subheading"><strong>Under Review</strong>, 2024</div>
+              <div class="subheading"><strong>ACL</strong>, 2024</div>
               <div class="subheading mb-1">
                 <ul class="list-inline dev-icons">
                   <li class="list-inline-item">
