update status at zhipu

--- a/index.html
+++ b/index.html
@@ -84,11 +84,14 @@
           <div class="subheading mb-5">2005 Songhu Rd., Shanghai, China · xiao_wang20 [at] fudan [dot] edu [dot] cn
           </div>
 
-          <p class="lead mb-5">Hi! I am a <b>PhD graduate</b> from <a href="https://nlp.fudan.edu.cn/">Fudan University NLP group</a>, formerly co-advised by <a href="http://qizhang.info/">Prof. Qi Zhang</a> and <a href="https://nlp.fudan.edu.cn/28702/list.htm">Prof. Xuanjing Huang</a>. During my doctoral studies, which included an internship at <a href="https://www.sailab.org.cn/">Shanghai AI Laboratory</a> under <a href="http://dahua.site/">Prof. Dahua Lin</a> and <a href="https://zhaoxun.tech/">Dr. Xun Zhao</a>, my research focused on the <b>trustworthiness of LLMs</b>, particularly their robustness and security, <b>continual learning</b>, and <b>information extraction</b>.</p>
+          <p class="lead mb-5">Hello! 👋</p>
 
-          <p class="lead mb-5">I am currently employed at <a href="https://www.zhipu.ai/">Zhipu AI</a>, working within the post-training group. My work involves <b>Alignment, RLHF, Reasoning, and Code</b>. </p>
+          <p class="lead mb-5">I am a <b>PhD graduate</b> from <a href="https://nlp.fudan.edu.cn/">Fudan University NLP group</a>, formerly co-advised by <a href="http://qizhang.info/">Prof. Qi Zhang</a> and <a href="https://nlp.fudan.edu.cn/28702/list.htm">Prof. Xuanjing Huang</a>. During my doctoral studies, my research focused on the <b>trustworthiness of LLMs</b>, particularly their robustness and security, <b>continual learning</b>, and <b>information extraction</b>.</p>
 
-          <p class="lead mb-5">I am always open to collaborations and discussions with others who are interested in these areas. Feel free to reach out to connect!</p>
+          <p class="lead mb-5">I'm currently working at <a href="https://www.zhipu.ai/">Zhipu AI</a> in the post-training group. My focus areas include <b>Alignment, RLHF, Reasoning, and Code</b>. I'm passionate about improving the quality of feedback mechanisms by providing finer-grained and more informative signals. A significant part of my role involves developing scalable oversight strategies to supervise more powerful models efficiently and cost-effectively. I'm optimistic about the realization of AGI and thrilled to be part of this exciting journey! 🚀</p>
+
+
+          <p class="lead mb-5">Always up for collaborating and chatting about these topics—feel free to reach out! 🤝</p>
 
 
           <div class="social-icons">
